# AstroCalc

./: .dockerignore  .replit  API_USAGE_GUIDE.md  Dockerfile  README.md  astrology_db.sqlite3  astrology_db.sqlite3-journal  astrology_db.sqlite3-shm  astrology_db.sqlite3-wal  build.bat  build.sh  build_executable.py  docker-compose.prod.yml  docker-compose.yml  install.py  main.py  pyproject.toml  pyrightconfig.json  replit.md  requirements.txt  start_replit.sh
attached_assets/: Pasted-Based-on-my-research-I-ll-create-a-comprehensive-universal-installer-system-for-your-Vedic-Astrolog-1758216332610_1758216332610.txt  Pasted-Improved-Prompt-for-Replit-Vibe-Coder-Build-a-complete-Swiss-Ephemeris-based-Vedic-astrology-web-ap-1758019369642_1758019369643.txt
deployment/: README.md
deployment/apache/: vedic-astrology.conf
deployment/aws/: Procfile  application.py  cloudformation.yaml  deploy.sh  requirements.txt
deployment/aws/.ebextensions/: 01_python.config
deployment/ci-cd/: github-actions.yml
deployment/digitalocean/: app.yaml  deploy.sh
deployment/env/: development.env  production.env
deployment/gcp/: Dockerfile  cloudbuild.yaml  deploy.sh
deployment/k8s/: configmap.yaml  deploy.sh  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
deployment/nginx/: nginx.conf
deployment/oracle/: Dockerfile  compute_setup.sh
deployment/ssl/: generate_ssl.sh
deployment/systemd/: vedic-astrology.service
deployment/terraform/: main.tf  user_data.sh
docs/: nextjs-api-integration.md
static/: admin.html  analytics.html  index.html
