[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.9",
    "pyswisseph>=2.10.3.2",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
